# malaga

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.git_backup/: config  index
malaga/: api.py  hooks.py  override_default_class_method.py  update_item.py
malaga/config/: desktop.py  docs.py
malaga/dashboard/: pick_list.py
malaga/doc_events/: batch.py  delivery_note.py  pick_list.py  sales_order.py  stock_ledger_entry.py  supplier.py
malaga/fixtures/: custom_field.json  property_setter.json
malaga/malaga/doctype/available_qty/: available_qty.json  available_qty.py
malaga/malaga/doctype/gate_pass_exit/: gate_pass_exit.js  gate_pass_exit.json  gate_pass_exit.py  test_gate_pass_exit.py
malaga/malaga/doctype/item_creation_defaults/: item_creation_defaults.json  item_creation_defaults.py
malaga/malaga/doctype/packing_type/: packing_type.js  packing_type.json  packing_type.py  test_packing_type.py
malaga/malaga/doctype/picked_sales_orders/: picked_sales_orders.json  picked_sales_orders.py
malaga/malaga/doctype/punch_no/: punch_no.js  punch_no.json  punch_no.py  test_punch_no.py
malaga/malaga/doctype/sales_order_item_pick_list/: sales_order_item_pick_list.json  sales_order_item_pick_list.py
malaga/malaga/doctype/selection_sheet/: selection_sheet.js  selection_sheet.json  selection_sheet.py  test_selection_sheet.py
malaga/malaga/doctype/selection_sheet_product/: selection_sheet_product.json  (+1 more)
malaga/override/: delivery_note.py  pick_list.py  quotation.py  sales_order.py
malaga/public/js/: pick_list_list.js  serial_no_batch_selector.js
(+75 files in other folders)
